--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         var person = {
             first_name: "Peter",
             last_name: "Hansen",
-            dob: "250188",
+            dob: "241289",
             gender: "male"
         };
 
@@ -17,8 +17,7 @@
         generateCpr.setDob(person.dob);
         generateCpr.recursiveSearch();
         var cprList = generateCpr.getCprList();
-        console.log(cprList[57]);
-        console.log(cprList.length);
+        console.log(cprList);
       </script>
   </head>
   <body>
